[workspace]
members = ["windres-test"]

[package]
name = "windres"
version = "0.2.1"
authors = ["FaultyRAM <explodingpsu@gmail.com>"]
description = "Compiles Windows resource files (.rc) into a Rust program."
repository = "https://github.com/FaultyRAM/windres-rs"
readme = "README.md"
keywords = ["Windows", "resource", "rc"]
categories = ["development-tools::build-utils"]
license = "Apache-2.0 OR MIT"

[target.'cfg(target_os = "windows")'.dependencies.concat-string]
version = "1"

[target.'cfg(all(target_os = "windows", target_env = "msvc"))'.dependencies.find-winsdk]
version = "0.2"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
